--- a/Atvd-1-Integracao-De-Sistemas/SocketServer/.classpath
+++ b/Atvd-1-Integracao-De-Sistemas/SocketServer/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="jar/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
